Atualiza link de download do currículo

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <h2>Baixe a versão completa do meu currículo em PDF.</h2>
                         <p>Reúna todos os detalhes sobre minha trajetória, experiências e qualificações em um documento pronto para compartilhar com equipes de tecnologia, marketing e atendimento.</p>
                     </div>
-                    <a class="btn btn-resume" href="pdf/curriculo-pablo-eduardo-silva.pdf" download target="_blank" rel="noopener">
+                    <a class="btn btn-resume" href="pdf/Pablo.pdf" download="Pablo.pdf">
                         <i class="fa-solid fa-file-arrow-down"></i>
                         <span>Download do currículo</span>
                     </a>
